--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -25,11 +27,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:' + rootProject.ext.kotlin_version
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:' + rootProject.ext.constraintLayout_version
+
+    // Recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:' + rootProject.ext.gson_version
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:' + rootProject.ext.glide_version
+    kapt 'com.github.bumptech.glide:compiler:' + rootProject.ext.glide_version
+
+    // testImplementation
     testImplementation 'junit:junit:4.12'
+
+    // AndroidTestImplmentation
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
