--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
     repositories {
         google()
         jcenter()
@@ -9,7 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,8 +18,16 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+        maven { url 'https://jitpack.io' }
     }
+}
+
+ext {
+    kotlin_version = '1.3.31'
+    constraintLayout_version = '1.1.3'
+    glide_version = '4.10.0'
+    gson_version = '2.8.6'
 }
 
 task clean(type: Delete) {
